Sun Jun 13 15:46:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rubyoptions.rb: add a simple test for __END__ and
	  DATA.

Sun Jun 13 04:24:18 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb: Delegate !=, eql? and hash [ruby-core:26139]

Sun Jun 13 02:12:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac.trans (buf_apply): fix for patterns
	  whose result is 2 bytes. [ruby-core:30751]

Sun Jun 13 01:38:17 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (rb_localtime_r2): fix mixed declarations and code.

Sun Jun 13 00:27:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/lib/dl.rb: don't require when already loaded.

Sun Jun 13 00:02:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (dealloc): workaround fix for libffi's
	  ffi_closure_free. [ruby-dev:41483] [ruby-dev:41214]

Sat Jun 12 10:02:26 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_syscall): should check argument string taint before
	  invoking system calls.

Sat Jun 12 09:18:31 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (uninitialized_constant): process through
	  rb_class_real() to remove "Object::" from error message.
	  [ruby-dev:40951]

Sat Jun 12 00:38:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/dbm/extconf.rb: accept Berkley DB version 3, 4 and 5.
	  a patch from Takahiro Kambe.  [ruby-dev:41531]

Fri Jun 11 23:21:35 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (init_leap_second_info): check the result of
	  gmtime_with_leapsecond.

Fri Jun 11 23:04:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_get_ciphers):
	  use sk_SSL_CIPHER_num and sk_SSL_CIPHER_value instead of cast.
	  patched by Takahiro Kambe [ruby-dev:41530]

Fri Jun 11 22:59:31 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/missing.h (isnan): fix compilation error on OpenBSD.

Fri Jun 11 22:39:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>
